# tp-3-szymonpiotr

./: CMakeLists.txt
Sprawozdanie_projekt_3/: Sprawozdanie_projekt_3.ipynb
scikit_build_example/src/: main.cpp
scikit_build_example/src/scikit_build_example/: __init__.py  __init__.pyi
scikit_build_example/tests/: test_basic.py
scikit_build_example1/: CMakeLists.txt
scikit_build_example1/src/scikit_build_example/: __init__.py  __init__.pyi
